--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,7 @@ test:
 
 production:
   adapter: mysql2
-  encoding: unicode
+  encoding: utf8
   database: simple_surveys_production
   pool: 5
   username: simple_surveys
